Signed-off-by: radin3607 <radin3607@yahoo.com> aa

--- a/iman_elahy_hw09/Views/Home/searchbox.cshtml
+++ b/iman_elahy_hw09/Views/Home/searchbox.cshtml
@@ -1,7 +1,11 @@
-﻿@model Member
+﻿@model listlibraryvm
 <form class="row g-3" asp-controller="Home" asp-action="search"  method="post">
-    <label for="Name" class="form-label"> نام ونام خانوادگی</label>
-  <input type="text" asp-for=Name class="form-control">
+    <label for="memberName" class="form-label"> نام</label>
+  <input type="text" asp-for=memberName class="form-control">
+  <label for="bookname" class="form-label"> نام کتاب  </label>
+  <input type="text" asp-for=bookname class="form-control">
+  <label for="LibraryName" class="form-label"> نام کتابخانه </label>
+  <input type="text" asp-for=LibraryName class="form-control">
   <div dir="rtl">
     <input type="submit" class="btn btn-success" value="تایید" >
       <a class="btn btn-outline-danger"asp-controller="Home" asp-action="Index"  dir="rtl">بازگشت به لیست </a>
