--- a/iman_elahy_hw09/Views/Home/search.cshtml
+++ b/iman_elahy_hw09/Views/Home/search.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Member>
+﻿@model List<listlibraryvm>
 
 
 
@@ -7,15 +7,11 @@
     <tr>
       
       <th scope="col">شماره</th>
-      <th scope="col">شناسه</th>
-      <th scope="col">نام </th>
-      <th scope="col">نام خانوادگی </th>
-      <th scope="col">کد ملی</th>
-      <th scope="col">تاریخ ثبت نام </th>
-       <th scope="col">شماره تماس</th>
-      <th scope="col">وضعیت</th>
-      <th scope="col">جنسیت </th>
-       <th scope="col"></th>
+       <th scope="col">شناسه </th>
+      <th scope="col">نام</th>
+      <th scope="col">نام کتابخانه </th>
+      <th scope="col">شهر و آدرس </th>
+      <th scope="col">کتاب امانت </th>
     </tr>
   </thead>
   <tbody>
@@ -23,38 +19,18 @@
     @for (var i = 0; i < Model.Count; i++)
     {
         <tr>
-         <th scope="row">@(i+1)</th>
-      <td>@Model[i].ID</td>
-      <td>@Model[i].Name</td>
-      <td>@Model[i].LastName</td>
-      <td>@Model[i].NationalCode</td>
-      <td>@Model[i].RegistrationDate</td>
-      <td>@Model[i].PhoneNumber</td>
-      @if ((int)Member.Level.Gold==Model[i].levelindex)
-      {
-                    <td>@Member.Level.Gold</td>
-                }else if ((int)Member.Level.silver == Model[i].levelindex)
-                {
-                      <td>@Member.Level.silver</td>
-                    
-                }else{
-                     <td>@Member.Level.Bronze</td>
-
-                }
-    @if ((int)Member.Gender.Famale==Model[i].Genderindex)
-      {
-                    <td>@Member.Gender.Famale</td>
-                }else 
-                {
-                      <td>@Member.Gender.Male</td>
-                    
-                }
-
+        <td>@(i+1)</td>
+         <td>@Model[i].ID</td>
+      <td>@Model[i].memberName</td>
+      <td>@Model[i].LibraryName</td>
+      <td>@Model[i].CityAndAddres</td>
+      <td>@Model[i].bookname</td>
      
-
+     
+@*
       <td> <a class="btn btn-danger"asp-controller="Home" asp-action="delete" asp-route-id="@Model[i].ID">حذف</a>
           <a class="btn btn-primary"asp-controller="Home" asp-action="edite" asp-route-id="@Model[i].ID">ویرایش</a>
-          </td>
+          </td>*@
         </tr>
     }
      
