--- a/iman_elahy_hw09/Views/_ViewImports.cshtml
+++ b/iman_elahy_hw09/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using iman_elahy_hw09
 @using iman_elahy_hw09.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using iman_elahy_hw09.Models.viewmodel
